Tags has been changed following the specification (#211)
* License tags has been changed

* all phenomenal containers has been added

--- a/DiffExpIR/0.0.1/Dockerfile
+++ b/DiffExpIR/0.0.1/Dockerfile
@@ -9,7 +9,8 @@ LABEL software.version="0.0.1"
 LABEL about.summary="Differentially expressed intron retention"
 LABEL about.home="https://github.com/r78v10a07/DiffExpIR"
 LABEL about.documentation="https://github.com/r78v10a07/DiffExpIR"
-LABEL license="https://github.com/r78v10a07/DiffExpIR"
+LABEL about.license_file="https://github.com/r78v10a07/DiffExpIR"
+LABEL about.license="SPDX:MIT"
 LABEL about.tags="RNA-seq"
 
 ################## MAINTAINER ######################
