--- a/Rstudio-Proteomics/1.0.0/Dockerfile
+++ b/Rstudio-Proteomics/1.0.0/Dockerfile
@@ -12,7 +12,8 @@ LABEL software.version="1"
 LABEL about.summary="Rstudio-Proteomics is an adaptation from the original images provided by the Rocker-org. The container provided here contains a Rstudio server configurated with several packages dedicated to Proteomcis data analysis.Rstudio-Proteomics is an adaptation from the original images provided by the Rocker-org. The container provided here contains a Rstudio server configurated with several packages dedicated to Proteomcis data analysis."
 LABEL about.home="https://github.com/rocker-org"
 LABEL about.documentation="https://github.com/rocker-org"
-LABEL license="https://github.com/rocker-org"
+LABEL about.license_file="https://github.com/rocker-org"
+LABEL about.license="SPDX:Apache-2.0"
 LABEL about.tags="Genomics, Proteomics, Transcriptomics, Metabolomics, General"
 
 ################## INSTALLATION ###########################
