--- a/comet/2016011/Dockerfile
+++ b/comet/2016011/Dockerfile
@@ -9,7 +9,9 @@ LABEL software.version="2016011"
 LABEL about.summary="an open source tandem mass spectrometry sequence database search tool"
 LABEL about.home="http://comet-ms.sourceforge.net/"
 LABEL about.documentation="http://comet-ms.sourceforge.net/parameters/parameters_2016010/"
-LABEL license="http://comet-ms.sourceforge.net/"
+LABEL about.license_file="http://comet-ms.sourceforge.net/"
+LABEL about.license="SPDX:Apache-2.0"
+LABEL extra.identifiers.biotools="comet"
 LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
