--- a/dia-umpire/2.1.2/Dockerfile
+++ b/dia-umpire/2.1.2/Dockerfile
@@ -9,7 +9,8 @@ LABEL software.version="2.1.2"
 LABEL about.summary="computational analysis of data independent acquisition (DIA) mass spectrometry-based proteomics data"
 LABEL about.home="http://diaumpire.sourceforge.net"
 LABEL about.documentation="http://diaumpire.sourceforge.net"
-LABEL license="http://diaumpire.sourceforge.net"
+LABEL about.license_file="http://diaumpire.sourceforge.net"
+LABEL about.license="SPDX:Apache-2.0"
 LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
