--- a/msamanda/1.0.0.5242/Dockerfile
+++ b/msamanda/1.0.0.5242/Dockerfile
@@ -1,7 +1,9 @@
 ################## BASE IMAGE ######################
+
 FROM biocontainers/biocontainers:latest
 
 ################## METADATA ######################
+
 LABEL base.image="biocontainers:latest"
 LABEL version="2"
 LABEL software="MSAmanda"
@@ -9,7 +11,8 @@ LABEL software.version="1.0.0.5242"
 LABEL about.summary="scoring system to identify peptides out of tandem mass spectrometry"
 LABEL about.home="http://ms.imp.ac.at/?goto=msamanda"
 LABEL about.documentation="http://ms.imp.ac.at/?goto=msamanda"
-LABEL license="http://ms.imp.ac.at/?goto=msamanda"
+LABEL about.license_file="http://ms.imp.ac.at/?goto=msamanda"
+LABEL about.license="SPDX:LGPL-3.0-only"
 LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
