--- a/pymol-jupiter/1.0.0/Dockerfile
+++ b/pymol-jupiter/1.0.0/Dockerfile
@@ -5,11 +5,12 @@ FROM biocontainers/biocontainers:latest
 LABEL base.image="biocontainers:latest"
 LABEL version="1"
 LABEL software="PyMol-Jupyter"
-LABEL software.version="1"
+LABEL software.version="1.0.0"
 LABEL about.summary="a portable way of interacting with PyMol via Jupyter notebook"
 LABEL about.home="http://github.com/ocramz/jupyter-docker-pymol"
 LABEL about.documentation="http://github.com/ocramz/jupyter-docker-pymol"
-LABEL license="http://github.com/ocramz/jupyter-docker-pymol"
+LABEL about.license_file="https://github.com/ocramz/jupyter-docker-pymol/blob/master/LICENSE"
+LABEL about.license="SPDX:MIT"
 LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
