--- a/raremetalworker/4.13.7/Dockerfile
+++ b/raremetalworker/4.13.7/Dockerfile
@@ -8,9 +8,10 @@ LABEL software="raremetalworker"
 LABEL software.version="4.13.7"
 LABEL about.summary="single variant analysis, generating summary statistics for gene level meta analyses"
 LABEL about.home="http://genome.sph.umich.edu/wiki/RAREMETALWORKER"
-LABEL about.documentation=" http://genome.sph.umich.edu/wiki/RAREMETALWORKER"
-LABEL license=" http://genome.sph.umich.edu/wiki/RAREMETALWORKER"
+LABEL about.documentation="http://genome.sph.umich.edu/wiki/RAREMETALWORKER|https://github.com/statgen/Raremetal"
+LABEL about.license_file="http://genome.sph.umich.edu/wiki/RAREMETALWORKER"
 LABEL about.tags="Genomics"
+LABEL extra.identifiers.biotools="RAREMETAL"
 
 
 ################## BEGIN INSTALLATION ######################
