--- a/abyss/1.9.0/Dockerfile
+++ b/abyss/1.9.0/Dockerfile
@@ -10,7 +10,9 @@ LABEL software.version="1.9.0"
 LABEL about.summary="ABySS is a *de novo* sequence assembler"
 LABEL about.home="http://www.bcgsc.ca/platform/bioinfo/software/abyss/releases/1.9.0"
 LABEL about.documentation="https://github.com/bcgsc/abyss#abyss"
-LABEL license="https://github.com/bcgsc/abyss/blob/master/LICENSE"
+LABEL about.license_file="https://github.com/bcgsc/abyss/blob/master/LICENSE"
+LABEL about.license="SPDX:GPL-3.0-only"
+LABEL extra.identifiers.biotools="abyss"
 LABEL about.tags="Genomics"
 
 ################## MAINTAINER ######################
