--- a/bedtools/2.25.0/Dockerfile
+++ b/bedtools/2.25.0/Dockerfile
@@ -11,7 +11,9 @@ LABEL software.version="2.25.0"
 LABEL about.summary="a powerful toolset for genome arithmetic"
 LABEL about.home="http://bedtools.readthedocs.io/en/latest/"
 LABEL about.documentation="http://quinlanlab.org/tutorials/bedtools/bedtools.html"
-LABEL license="https://github.com/arq5x/bedtools2/blob/master/LICENSE"
+LABEL about.license_file="https://github.com/arq5x/bedtools2/blob/master/LICENSE"
+LABEL about.license="SPDX:LGPL-2.0-only"
+LABEL extra.identifiers.biotools="bedtools"
 LABEL about.tags="Genomics"
 
 ################## MAINTAINER ######################
