--- a/bowtie/1.1.2/Dockerfile
+++ b/bowtie/1.1.2/Dockerfile
@@ -10,7 +10,9 @@ LABEL software.version="1.1.2"
 LABEL about.summary="an ultrafast memory-efficient short read aligner"
 LABEL about.home="http://bowtie-bio.sourceforge.net/index.shtml"
 LABEL about.documentation="http://bowtie-bio.sourceforge.net/manual.shtml"
-LABEL license="http://bowtie-bio.sourceforge.net/index.shtml"
+LABEL about.license_file="http://bowtie-bio.sourceforge.net/index.shtml"
+LABEL about.license="SPDX:Artistic-2.0"
+LABEL extra.identifiers.biotools="bowtie"
 LABEL about.tags="Genomics"
 
 ################## MAINTAINER ######################
