--- a/bowtie2/2.2.9/Dockerfile
+++ b/bowtie2/2.2.9/Dockerfile
@@ -10,7 +10,9 @@ LABEL software.version="2.2.9"
 LABEL about.summary="an ultrafast memory-efficient short read aligner"
 LABEL about.home="http://bowtie-bio.sourceforge.net/bowtie2/index.shtml"
 LABEL about.documentation="http://bowtie-bio.sourceforge.net/bowtie2/index.shtml"
-LABEL license="http://bowtie-bio.sourceforge.net/bowtie2/index.shtml"
+LABEL about.license_file="http://bowtie-bio.sourceforge.net/bowtie2/index.shtml"
+LABEL about.license="SPDX:Artistic-2.0"
+LABEL extra.identifiers.biotools="bowtie2"
 LABEL about.tags="Genomics"
 
 ################## MAINTAINER ######################
