--- a/denovogui/1.5.2/Dockerfile
+++ b/denovogui/1.5.2/Dockerfile
@@ -9,7 +9,9 @@ LABEL software.version="1.5.2"
 LABEL about.summary="graphical user interface for de novo sequencing of tandem mass spectra"
 LABEL about.home="https://github.com/compomics/denovogui"
 LABEL about.documentation="https://github.com/compomics/denovogui"
-LABEL license="https://github.com/compomics/denovogui"
+LABEL about.license_file="https://github.com/compomics/denovogui"
+LABEL about.license="SPDX:Apache-2.0"
+LABEL extra.identifiers.biotools="denovogui"
 LABEL about.tags="Proteomics"
 
 ################## MAINTAINER ######################
