--- a/openms/1.11.1-3/Dockerfile
+++ b/openms/1.11.1-3/Dockerfile
@@ -9,8 +9,10 @@ LABEL software.version="1.11.1-3"
 LABEL about.summary="C++ libraries ans tools for MS/MS data analysis"
 LABEL about.home="http://open-ms.sourceforge.net/"
 LABEL about.documentation="http://open-ms.sourceforge.net/"
-LABEL license="http://open-ms.sourceforge.net/"
+LABEL about.license_file="https://github.com/OpenMS/OpenMS/blob/develop/LICENSE"
+LABEL about.license="SPDX:BSD-1-Clause"
 LABEL about.tags="Proteomics"
+LABEL extra.identifiers.biotools="openms"
 
 ################## MAINTAINER ######################
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
