--- a/pepnovo+/20120423/Dockerfile
+++ b/pepnovo+/20120423/Dockerfile
@@ -9,8 +9,10 @@ LABEL software.version="20120423"
 LABEL about.summary="de novo sequencing of low precision MS/MS data"
 LABEL about.home="http://proteomics.ucsd.edu/Software/PepNovo/"
 LABEL about.documentation="http://proteomics.ucsd.edu/Software/PepNovo/"
-LABEL license="http://proteomics.ucsd.edu/Software/PepNovo/"
+LABEL about.license_file="http://proteomics.ucsd.edu/Software/PepNovo/"
+LABEL about.license="SPDX:CC-BY-NC-4.0"
 LABEL about.tags="Proteomics"
+LABEL extra.identifiers.biotools="pepnovo"
 
 ################## MAINTAINER ######################
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
