--- a/peptideshaker/1.16.17/Dockerfile
+++ b/peptideshaker/1.16.17/Dockerfile
@@ -9,9 +9,10 @@ LABEL software.version="1.16.17"
 LABEL about.summary="interpretation of proteomics identification results"
 LABEL about.home="http://compomics.github.io/projects/peptide-shaker.html"
 LABEL about.documentation="http://compomics.github.io/projects/peptide-shaker.html"
-LABEL license="Apache-2.0"
-LABEL license_file="https://spdx.org/licenses/Apache-2.0.html"
+LABEL about.license_file="https://github.com/compomics/peptide-shaker/blob/master/README.txt"
+LABEL about.license="SPDX:Apache-2.0"
 LABEL about.tags="Proteomics, biotools"
+LABEL extra.identifiers.biotools="peptideshaker"
 
 ################## MAINTAINER ######################
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
