--- a/snpeff/4.1k/Dockerfile
+++ b/snpeff/4.1k/Dockerfile
@@ -9,8 +9,10 @@ LABEL software.version="4.1"
 LABEL about.summary="Genetic variant annotation and effect prediction toolbox"
 LABEL about.home="http://snpeff.sourceforge.net/"
 LABEL about.documentation="http://snpeff.sourceforge.net/"
-LABEL license="https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html"
+LABEL about.license_file="https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html"
+LABEL about.license="SPDX:GPL-2.0-only"
 LABEL about.tags="Genomics"
+LABEL extra.identifiers.biotools="snpeff"
 
 
 ################## INSTALLATION ######################
