--- a/soapdenovo/240/Dockerfile
+++ b/soapdenovo/240/Dockerfile
@@ -9,8 +9,10 @@ LABEL software.version="240"
 LABEL about.summary="a novel short-read assembly method that can build a de novo draft assembly for the human-sized genomes"
 LABEL about.home="http://soap.genomics.org.cn/soapdenovo.html"
 LABEL about.documentation="http://soap.genomics.org.cn/soapdenovo.html"
-LABEL license="http://soap.genomics.org.cn/soapdenovo.html"
+LABEL about.license_file="http://soap.genomics.org.cn/soapdenovo.html"
+LABEL about.license="SPDX:GPL-3.0-only"
 LABEL about.tags="Proteomics"
+LABEL extra.identifiers.biotools="soapdenovo"
 
 ################## MAINTAINER ######################
 MAINTAINER Saulo Alves Aflitos <sauloal@gmail.com>
