--- a/tandem/15-12-15-2/Dockerfile
+++ b/tandem/15-12-15-2/Dockerfile
@@ -10,8 +10,10 @@ LABEL software.version="15-12-15-2"
 LABEL about.summary="software that can match tandem mass spectra with peptide sequences"
 LABEL about.home="http://www.thegpm.org/tandem/"
 LABEL about.documentation="http://www.thegpm.org/tandem/"
-LABEL license="http://www.thegpm.org/tandem/"
+LABEL about.license_file="http://www.thegpm.org/tandem/"
+LABEL about.license="SPDX:Artistic-2.0"
 LABEL about.tags="Proteomics"
+LABEL extra.identifiers.biotools="xtandem"
 
 ################## MAINTAINER ######################
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
