fix extra quote for tophat

--- a/tophat/2.1.1/Dockerfile
+++ b/tophat/2.1.1/Dockerfile
@@ -1,4 +1,4 @@
-FROM biocontainers/"biocontainers:latest
+FROM biocontainers/biocontainers:latest
 
 ################################### METADATA ######################  ######################
 
