--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "metfrag-cli-batch/2.4.3"]
 	path = metfrag-cli-batch/2.4.3
 	url = https://github.com/phnmnl/container-metfrag-cli-batch/
+[submodule "ipo/1.7.5"]
+	path = ipo/1.7.5
+	url = https://github.com/phnmnl/container-ipo
