only two containers from phenomenal following the guidelines (#212)
* added metfrag

* added ipo tool

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,156 +1,6 @@
-[submodule "container-isatab2json"]
-	path = isatab2json
-	url = https://github.com/phnmnl/container-isatab2json
-[submodule "container-ipo"]
-	path = ipo
+[submodule "metfrag-cli-batch/2.4.3"]
+	path = metfrag-cli-batch/2.4.3
+	url = https://github.com/phnmnl/container-metfrag-cli-batch/
+[submodule "ipo/1.7.5"]
+	path = ipo/1.7.5
 	url = https://github.com/phnmnl/container-ipo
-[submodule "container-mtblisa"]
-	path = mtblisa
-	url = https://github.com/phnmnl/container-mtblisa
-[submodule "container-batch_correction"]
-	path = batch_correction
-	url = https://github.com/phnmnl/container-batch_correction
-[submodule "container-csifingerid"]
-	path = csifingerid
-	url = https://github.com/phnmnl/container-csifingerid
-[submodule "container-bruker2batman"]
-	path = bruker2batman
-	url = https://github.com/phnmnl/container-bruker2batman
-[submodule "container-isatab-create"]
-	path = isatab-create
-	url = https://github.com/phnmnl/container-isatab-create
-[submodule "container-metfrag-cli-batch"]
-	path = metfrag-cli-batch
-	url = https://github.com/c-ruttkies/container-metfrag-cli-batch
-[submodule "container-isatab-validator"]
-	path = isatab-validator
-	url = https://github.com/phnmnl/container-isatab-validator
-[submodule "container-mtbls-dwnld"]
-	path = mtbls-dwnld
-	url = https://github.com/phnmnl/container-mtbls-dwnld
-[submodule "container-nmrml2isa"]
-	path = nmrml2isa
-	url = https://github.com/phnmnl/container-nmrml2isa
-[submodule "container-dimspy"]
-	path = dimspy
-	url = https://github.com/phnmnl/container-dimspy
-[submodule "container-mzml2isa"]
-	path = mzml2isa
-	url = https://github.com/phnmnl/container-mzml2isa
-[submodule "container-iso2flux"]
-	path = iso2flux
-	url = https://github.com/phnmnl/container-iso2flux
-[submodule "container-escher-fluxomics"]
-	path = escher-fluxomics
-	url = https://github.com/phnmnl/container-escher-fluxomics
-[submodule "container-isaslicer"]
-	path = isaslicer
-	url = https://github.com/phnmnl/container-isaslicer
-[submodule "container-batman"]
-	path = batman
-	url = https://github.com/phnmnl/container-batman
-[submodule "container-qualitymetrics"]
-	path = qualitymetrics
-	url = https://github.com/phnmnl/container-qualitymetrics
-[submodule "container-pathwayEnrichment"]
-	path = pathwayEnrichment
-	url = https://github.com/phnmnl/container-pathwayEnrichment
-[submodule "nmrprocflow-ie"]
-	path = nmrprocflow-ie
-	url = https://github.com/phnmnl/nmrprocflow-ie
-[submodule "container-stocsy"]
-	path = stocsy
-	url = https://github.com/phnmnl/container-stocsy
-[submodule "container-rdolphin"]
-	path = rdolphin
-	url = https://github.com/phnmnl/container-rdolphin
-[submodule "container-biosigner"]
-	path = biosigner
-	url = https://github.com/phnmnl/container-biosigner
-[submodule "container-rnmr1d"]
-	path = rnmr1d
-	url = https://github.com/phnmnl/container-rnmr1d
-[submodule "container-speaq"]
-	path = speaq
-	url = https://github.com/phnmnl/container-speaq
-[submodule "container-nmrmlconv"]
-	path = nmrmlconv
-	url = https://github.com/phnmnl/container-nmrmlconv
-[submodule "container-xcms-1.x"]
-	path = xcms-1.x
-	url = https://github.com/phnmnl/container-xcms-1.x
-[submodule "container-metfrag-vis"]
-	path = metfrag-vis
-	url = https://github.com/phnmnl/container-metfrag-vis
-[submodule "container-passatutto"]
-	path = passatutto
-	url = https://github.com/phnmnl/container-passatutto
-[submodule "container-camera"]
-	path = camera
-	url = https://github.com/phnmnl/container-camera
-[submodule "container-msnbase"]
-	path = msnbase
-	url = https://github.com/phnmnl/container-msnbase
-[submodule "container-isajson-validator"]
-	path = isajson-validator
-	url = https://github.com/phnmnl/container-isajson-validator
-[submodule "container-scp-aspera"]
-	path = scp-aspera
-	url = https://github.com/phnmnl/container-scp-aspera
-[submodule "container-univariate"]
-	path = univariate
-	url = https://github.com/phnmnl/container-univariate
-[submodule "container-tool-generic_filter"]
-	path = tool-generic_filter
-	url = https://github.com/phnmnl/container-tool-generic_filter
-[submodule "container-ms-vfetc"]
-	path = ms-vfetc
-	url = https://github.com/phnmnl/container-ms-vfetc
-[submodule "container-lcmsmatching"]
-	path = lcmsmatching
-	url = https://github.com/phnmnl/container-lcmsmatching
-[submodule "container-isa2w4m"]
-	path = isa2w4m
-	url = https://github.com/phnmnl/container-isa2w4m
-[submodule "container-metabolab"]
-	path = metabolab
-	url = https://github.com/phnmnl/container-metabolab
-[submodule "container-cdf2mid"]
-	path = cdf2mid
-	url = https://github.com/seliv55/container-cdf2mid
-[submodule "container-nmrML2BATMAN"]
-	path = nmrML2BATMAN
-	url = https://github.com/phnmnl/container-nmrML2BATMAN
-[submodule "container-nmrglue"]
-	path = nmrglue
-	url = https://github.com/phnmnl/container-nmrglue
-[submodule "container-soap-nmr"]
-	path = soap-nmr
-	url = https://github.com/phnmnl/container-soap-nmr
-[submodule "container-rnmr"]
-	path = rnmr
-	url = https://github.com/phnmnl/container-rnmr
-[submodule "container-ramid"]
-	path = ramid
-	url = https://github.com/phnmnl/container-ramid
-[submodule "container-metfrag-cli"]
-	path = metfrag-cli
-	url = https://github.com/phnmnl/container-metfrag-cli
-[submodule "container-papy"]
-	path = papy
-	url = https://github.com/phnmnl/container-papy
-[submodule "container-metaMS"]
-	path = metaMS
-	url = https://github.com/phnmnl/container-metaMS
-[submodule "container-xcms-w4m"]
-	path = xcms-w4m
-	url = https://github.com/phnmnl/container-xcms-w4m
-[submodule "container-nmrprocflow"]
-	path = nmrprocflow
-	url = https://github.com/phnmnl/container-nmrprocflow
-[submodule "container-nmrpro"]
-	path = nmrpro
-	url = https://github.com/phnmnl/container-nmrpro
-[submodule "container-metfamily"]
-	path = metfamily
-	url = https://github.com/phnmnl/container-metfamily
