--- a/abacas/1.3.1-3-deb/Dockerfile
+++ b/abacas/1.3.1-3-deb/Dockerfile
@@ -5,7 +5,8 @@ LABEL    software="abacas" \
     about.summary="Algorithm Based Automatic Contiguation of Assembled Sequences" \ 
     about.home="http://abacas.sourceforge.net/" \ 
     software.version="1.3.1-3-deb" \ 
-    about.copyright="© 2008-10 Genome Research Limited. All Rights Reserved." \ 
+    version="1" \ 
+    about.copyright=" 2008-10 Genome Research Limited. All Rights Reserved." \ 
     about.license="GPL-2+" \ 
     about.license_file="/usr/share/doc/abacas/copyright" \ 
     extra.binaries="/usr/bin/abacas" \ 
