--- a/biocontainers/1.0.0/Dockerfile
+++ b/biocontainers/1.0.0/Dockerfile
@@ -2,7 +2,8 @@
 FROM ubuntu:16.04
 
 ################## METADATA ######################
-LABEL base.image="ubuntu:16.04"
+
+LABEL base_image="ubuntu:16.04"
 LABEL version="4"
 LABEL software="Biocontainers base Image"
 LABEL software.version="1.0.0"
