--- a/openms/2.0.0/Dockerfile
+++ b/openms/2.0.0/Dockerfile
@@ -3,7 +3,7 @@
 FROM biocontainers/biocontainers:latest
 
 ################## METADATA ######################
-LABEL base.image="biocontainers:latest"
+LABEL base_image="biocontainers:latest"
 LABEL version="2"
 LABEL software="OpenMS"
 LABEL software.version="2.0.0-4build2"
