--- a/samtools/1.3.1/Dockerfile
+++ b/samtools/1.3.1/Dockerfile
@@ -3,7 +3,7 @@
 FROM biocontainers/biocontainers:latest
 
 ################## METADATA ######################
-LABEL base.image="biocontainers:latest"
+LABEL base_image="biocontainers:latest"
 LABEL version="2"
 LABEL software="Samtools"
 LABEL software.version="1.3.1"
