--- a/soapec/2.03/Dockerfile
+++ b/soapec/2.03/Dockerfile
@@ -1,7 +1,7 @@
 FROM biocontainers/biocontainers:latest
 
 ################## METADATA ######################
-LABEL base.image="biocontainers:latest"
+LABEL base_image="biocontainers:latest"
 LABEL version="1"
 LABEL software="soapec"
 LABEL software.version="2.03"
