--- a/test-ci/0.0.1/Dockerfile
+++ b/test-ci/0.0.1/Dockerfile
@@ -2,7 +2,7 @@
 FROM biocontainers/biocontainers:latest
 
 ################## METADATA ######################
-LABEL base.image="biocontainers:latest"
+LABEL base_image="biocontainers:latest"
 LABEL version="2"
 LABEL software="testci"
 LABEL software.version="0.0.1"
