--- a/vcftools/0.1.15/Dockerfile
+++ b/vcftools/0.1.15/Dockerfile
@@ -2,7 +2,7 @@
 FROM biocontainers/biocontainers:latest
 
 ################## METADATA ######################
-LABEL base.image="biocontainers:latest"
+LABEL base_image="biocontainers:latest"
 LABEL version="1"
 LABEL software="vcftools"
 LABEL software.version="0.1.15"
