--- a/bcftools/1.5/Dockerfile
+++ b/bcftools/1.5/Dockerfile
@@ -4,7 +4,7 @@ FROM biocontainers/biocontainers:latest
 
 ################## METADATA ######################
 
-LABEL base.image="biocontainers:latest"
+LABEL base_image="biocontainers:latest"
 LABEL version="1"
 LABEL software="bcftools"
 LABEL software.version="1.5"
