--- a/denovogui/1.5.2/Dockerfile
+++ b/denovogui/1.5.2/Dockerfile
@@ -2,7 +2,7 @@
 FROM biocontainers/biocontainers:latest
 
 ################## METADATA ######################
-LABEL base.image="biocontainers:latest"
+LABEL base_image="biocontainers:latest"
 LABEL version="2"
 LABEL software="denovogui"
 LABEL software.version="1.5.2"
