--- a/discovar/52488/Dockerfile
+++ b/discovar/52488/Dockerfile
@@ -2,7 +2,7 @@
 FROM biocontainers/biocontainers:latest
 
 ################## METADATA ######################
-LABEL base.image="biocontainers:latest"
+LABEL base_image="biocontainers:latest"
 LABEL version="1"
 LABEL software="discovar"
 LABEL software.version="52488"
