--- a/entrez-direct/7.50.20171103/Dockerfile
+++ b/entrez-direct/7.50.20171103/Dockerfile
@@ -2,7 +2,7 @@
 FROM biocontainers/biocontainers:latest
 
 ################## METADATA ######################
-LABEL base.image="biocontainers:latest"
+LABEL base_image="biocontainers:latest"
 LABEL version="3"
 LABEL software="entrez-direct"
 LABEL software.version="7.50.20171103"
