--- a/htslib/1.2.1/Dockerfile
+++ b/htslib/1.2.1/Dockerfile
@@ -4,7 +4,7 @@ FROM biocontainers/biocontainers:latest
 
 ################################# METADATA ###################################
 
-LABEL base.image="biocontainers:latest"
+LABEL base_image="biocontainers:latest"
 LABEL version="1"
 LABEL software="htslib"
 LABEL software.version="1.2.1"
