--- a/openms/1.11.1-3/Dockerfile
+++ b/openms/1.11.1-3/Dockerfile
@@ -2,7 +2,7 @@
 FROM biocontainers/biocontainers:latest
 
 ################## METADATA ######################
-LABEL base.image="biocontainers:latest"
+LABEL base_image="biocontainers:latest"
 LABEL version="1"
 LABEL software="OpenMS"
 LABEL software.version="1.11.1-3"
