--- a/peptideprophet/201510131012/Dockerfile
+++ b/peptideprophet/201510131012/Dockerfile
@@ -3,7 +3,7 @@ FROM biocontainers/biocontainers:latest
 
 ################## METADATA ######################
 
-LABEL base.image="biocontainers:latest"
+LABEL base_image="biocontainers:latest"
 LABEL version="1"
 LABEL software="PeptideProphet"
 LABEL software.version="201510131012"
