--- a/searchgui/2.6.0/Dockerfile
+++ b/searchgui/2.6.0/Dockerfile
@@ -2,7 +2,7 @@
 FROM biocontainers/biocontainers:latest
 
 ################## METADATA ######################
-LABEL base.image="biocontainers:latest"
+LABEL base_image="biocontainers:latest"
 LABEL version="1"
 LABEL software="SearchGUI"
 LABEL software.version="2.6.0"
