--- a/snpeff/4.1k/Dockerfile
+++ b/snpeff/4.1k/Dockerfile
@@ -2,7 +2,7 @@ FROM biocontainers/biocontainers:latest
 
 ################## METADATA ######################
 
-LABEL base.image="biocontainers:latest"
+LABEL base_image="biocontainers:latest"
 LABEL version="1"
 LABEL software="snpeff"
 LABEL software.version="4.1k"
