--- a/spades/3.6.0/Dockerfile
+++ b/spades/3.6.0/Dockerfile
@@ -1,7 +1,7 @@
 FROM biocontainers/biocontainers:latest
 
 ################## METADATA ######################
-LABEL base.image="biocontainers:latest"
+LABEL base_image="biocontainers:latest"
 LABEL version="1"
 LABEL software="spades"
 LABEL software.version="3.6.0"
