--- a/stacks/1.41/Dockerfile
+++ b/stacks/1.41/Dockerfile
@@ -3,7 +3,7 @@
 FROM biocontainers/biocontainers:latest
 
 ################## METADATA ######################
-LABEL base.image="biocontainers:latest"
+LABEL base_image="biocontainers:latest"
 LABEL version="1.2.1"
 LABEL software="Stacks"
 LABEL software.version="1.41"
