--- a/tophat/2.1.1/Dockerfile
+++ b/tophat/2.1.1/Dockerfile
@@ -2,7 +2,7 @@ FROM biocontainers/biocontainers:latest
 
 ################################### METADATA ######################  ######################
 
-LABEL base.image="biocontainers:latest"
+LABEL base_image="biocontainers:latest"
 LABEL version="1"
 LABEL software="tophat"
 LABEL software.version="2.1.1"
