--- a/tpp/5.0/Dockerfile
+++ b/tpp/5.0/Dockerfile
@@ -2,7 +2,7 @@
 FROM biocontainers/biocontainers:latest
 
 ################## METADATA ######################
-LABEL base.image="biocontainers:latest"
+LABEL base_image="biocontainers:latest"
 LABEL version="3"
 LABEL software="TPP"
 LABEL software.version="5.0"
