--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,9 @@
 [submodule "simid/1.0.0"]
 	path = simid/1.0.0
 	url = https://github.com/phnmnl/container-simid/
+[submodule "mtblisa/0.9.5"]
+	path = mtblisa/0.9.5
+	url = https://github.com/phnmnl/container-mtblisa
+[submodule "phnmnl-batch_correction/phenomenal_2018_02_22"]
+	path = phnmnl-batch_correction/phenomenal_2018_02_22
+	url = https://github.com/phnmnl/container-batch_correction/
