--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "phnmnl-batch_correction/phenomenal_2018_02_22"]
 	path = phnmnl-batch_correction/phenomenal_2018_02_22
 	url = https://github.com/phnmnl/container-batch_correction/
+[submodule "csifingerid/4.0"]
+	path = csifingerid/4.0
+	url = https://github.com/phnmnl/container-csifingerid
