fix biotools id

--- a/logol-bin/1.7.5-1-deb/Dockerfile
+++ b/logol-bin/1.7.5-1-deb/Dockerfile
@@ -6,7 +6,7 @@ LABEL    software="logol-bin" \
     about.home="http://logol.genouest.org" \ 
     software.version="1.7.5-1-deb" \ 
     version="1" \ 
-    extra.identifiers.biotools="logol-bin" \ 
+    extra.identifiers.biotools="logol" \ 
     about.copyright="2015 Olivier Sallou <olivier.sallou@irisa.fr>" \ 
     about.license="AGPL-3.0+" \ 
     about.license_file="/usr/share/doc/logol-bin/copyright" \ 
