fix biotools id

--- a/melting-gui/4.3.1dfsg-2-deb/Dockerfile
+++ b/melting-gui/4.3.1dfsg-2-deb/Dockerfile
@@ -6,7 +6,7 @@ LABEL    software="melting-gui" \
     about.home="http://www.ebi.ac.uk/compneur-srv/melting/" \ 
     software.version="4.3.1dfsg-2-deb" \ 
     version="1" \ 
-    extra.identifiers.biotools="melting-gui" \ 
+    extra.identifiers.biotools="melting" \ 
     about.copyright="19972009, Nicolas Le Novre   <lenov@ebi.ac.uk>" \ 
     about.license="GPL-2+" \ 
     about.license_file="/usr/share/doc/melting-gui/copyright" \ 
