fix biotools id

--- a/gbrowse-data/2.56dfsg-2-deb/Dockerfile
+++ b/gbrowse-data/2.56dfsg-2-deb/Dockerfile
@@ -6,7 +6,7 @@ LABEL    software="gbrowse-data" \
     about.home="http://www.gbrowse.org/" \ 
     software.version="2.56dfsg-2-deb" \ 
     version="1" \ 
-    extra.identifiers.biotools="gbrowse-data" \ 
+    extra.identifiers.biotools="gbrowse" \ 
     about.copyright=" 2002 Cold Spring Harbor Laboratory and University of California, Berkeley" \ 
     about.license="GPL-1+ or Artistic-2.0" \ 
     about.license_file="/usr/share/doc/gbrowse-data/copyright" \ 
