--- a/python3-dictobj/0.4-1-deb/Dockerfile
+++ b/python3-dictobj/0.4-1-deb/Dockerfile
@@ -6,7 +6,7 @@ LABEL    software="python3-dictobj" \
     about.home="http://pypi.python.org/pypi/dictobj" \ 
     software.version="0.4-1-deb" \ 
     version="1" \ 
-    about.copyright="2012-2016 William Grim "Grim Apps"" \ 
+    about.copyright="2012-2016 William Grim Grim Apps" \ 
     about.license="Apache 2.0" \ 
     about.license_file="/usr/share/doc/python3-dictobj/copyright" \ 
     about.tags=""
